fix arrows on mobile/tablet slider

--- a/frontend/src/Components/Slider/CustomSlider.scss
+++ b/frontend/src/Components/Slider/CustomSlider.scss
@@ -240,3 +240,10 @@ svg {
     display: block;
   }
 }
+
+.slick-prev, .slick-next {
+  display: none !important;
+  @include on-desktop {
+    display: block !important;
+  }
+}
